tests/baselines/reference/MemberFunctionDeclaration4.errors.txt
tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration4.ts(2,5): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/fmmberFunctionDeclarations/MemberFunctionDeclaration4.ts (1 errors) ====
    class C {
       *() { }
        ~
!!! error TS1003: Identifier expected.
    }